<?xml version="1.0" encoding="utf-8"?>
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
    android:padding="@dimen/activity_vertical_margin"
        android:layout_margin="16dp">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/memory_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:srcCompat="@drawable/ic_favorite_black_24px" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Title"
        android:layout_gravity="center"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/your_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/you_say"
        android:layout_gravity="end"/>
    <TextView
        android:id="@+id/mate_description"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/mate_say"/>
    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/add_date_description"/>
</LinearLayout>
</android.support.v7.widget.CardView>
